# KPS-Tiralabra2022

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: ai_classical.py  ai_markov1.py  ai_random.py  gorn.py  gorn_ai.py  gorn_stats.py  gorn_trie.py  gorn_ui.py  index.py  lauseet.txt
src/ai/: ai_classical.py  ai_markov1.py  ai_random.py  gorn_ai.py
src/tests/: classical_ai_test.py  gorn_ai_test.py  gorn_test.py  markov1_ai_test.py  random_ai_test.py  stats_test.py  trie_test.py
src/tests/test_Trie/: 11940-8.txt  Trie_testi.py
src/ui/: gorn_ui.py
