[tool.poetry]
name = "kps-tiralabra2022"
version = "0.1.0"
description = ""
authors = ["Tino Pönni <tino.ponni@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
